covenant automation pack

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
 
-application.url=http://automationpractice.com/
+application.url=https://127.0.0.1:7443
 browser=chrome
 default.timeout=60
+host.machine.api=127.0.0.1
+host.communication.port=2222
+host.username=thapelo
+host.password=@Psalm34v7
+
